<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        style="@style/ProfileComponent"
        android:layout_marginTop="@dimen/spacing_triple"
        android:text="Data Keluarga Kandung"/>

    <android.support.design.widget.TextInputLayout
        style="@style/ProfileComponent.TextInputLayout"
        android:layout_marginTop="@dimen/spacing_normal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_family_inp_name"
            style="@style/ProfileComponent.EditText"
            android:hint="@string/profile_name"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/ProfileComponent.TextInputLayout"
        android:layout_marginTop="@dimen/spacing_normal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_family_inp_status"
            style="@style/ProfileComponent.EditText"
            android:hint="@string/profile_status"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/ProfileComponent.TextInputLayout"
        android:layout_marginTop="@dimen/spacing_normal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_family_inp_ktp"
            style="@style/ProfileComponent.EditText"
            android:hint="@string/no_ktp"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/ProfileComponent.TextInputLayout"
        android:layout_marginTop="@dimen/spacing_normal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_family_inp_dob"
            style="@style/ProfileComponent.EditText"
            android:hint="@string/profile_dob"
            android:inputType="none"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/ProfileComponent.TextInputLayout"
        android:layout_marginTop="@dimen/spacing_normal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_family_inp_mother_name"
            style="@style/ProfileComponent.EditText"
            android:hint="@string/profile_mother_name"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_family_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_triple"
        android:layout_marginRight="@dimen/spacing_triple"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_primary_rounded"
        android:text="@string/save"
        android:textColor="@color/white"/>

</LinearLayout>
