<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/booking_wait_txt_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="17.5sp"
        android:text="@string/booking_wait_caption"
        android:textColor="#7f000000"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/booking_wait_txt_caption"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        android:background="@drawable/bg_gray_rounded"
        android:orientation="vertical"
        android:padding="@dimen/spacing_double">

        <LinearLayout
            style="@style/MarkerInfoLine">

            <TextView
                style="@style/MarkerInfoLineLabel"
                android:text="@string/nama"
                />

            <TextView
                android:id="@+id/booking_wait_txt_name"
                style="@style/MarkerInfoLineContent"
                tools:text=": Text"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/booking_wait_plat_container"
            style="@style/MarkerInfoLine">

            <TextView
                style="@style/MarkerInfoLineLabel"
                android:text="@string/plat"
                />

            <TextView
                android:id="@+id/booking_wait_txt_plat"
                style="@style/MarkerInfoLineContent"
                tools:text=": Text"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/MarkerInfoLine">

            <TextView
                style="@style/MarkerInfoLineLabel"
                android:text="@string/phone_number"
                />

            <TextView
                android:id="@+id/booking_wait_txt_phone"
                style="@style/MarkerInfoLineContent"
                android:textColor="?colorPrimary"
                tools:text=": Text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_double"
            android:orientation="horizontal">

            <Button
                android:id="@+id/booking_wait_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_normal"
                android:layout_weight="1"
                android:background="@drawable/btn_accent_rounded"
                android:text="@string/cancel"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/booking_wait_btn_complete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_rounded"
                android:text="@string/complete"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/booking_wait_btn_insert"
        android:layout_margin="@dimen/spacing_double"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="6.5sp"
        android:text="@string/booking_wait_notice"
        android:textColor="#ef0106"
        android:textSize="@dimen/text_small_body"
        />

    <Button
        android:id="@+id/booking_wait_btn_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="@dimen/spacing_triple"
        android:layout_marginRight="@dimen/spacing_triple"
        android:background="@drawable/btn_primary_rounded"
        android:elevation="@dimen/cardview_default_elevation"
        android:text="@string/booking_wait_insert_data"
        android:textColor="@color/white"/>

    <!-- ============================================= -->
    <!-- Child Container -->
    <!-- ============================================= -->

    <com.bluelinelabs.conductor.ChangeHandlerFrameLayout
        android:id="@+id/booking_wait_child_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/cardview_default_elevation"/>

</RelativeLayout>
