<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card_half"
    android:elevation="@dimen/spacing_double"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_double"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        >

        <TextView
            android:id="@id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="?selectableItemBackgroundBorderless"
            android:paddingBottom="@dimen/spacing_normal"
            android:paddingLeft="@dimen/spacing_double"
            android:paddingRight="@dimen/spacing_double"
            android:paddingTop="@dimen/spacing_normal"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </FrameLayout>

    <LinearLayout
        style="@style/MarkerInfoLine"
        android:visibility="gone">

        <TextView
            style="@style/MarkerInfoLineLabel"
            android:text="@string/driver_name"
            />

        <TextView
            android:id="@id/txtDriverName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text=": Text"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/MarkerInfoLine">

        <TextView
            style="@style/MarkerInfoLineLabel"
            android:text="@string/plat"
            />

        <TextView
            android:id="@id/txtPlat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text=": Text"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/MarkerInfoLine">

        <TextView
            style="@style/MarkerInfoLineLabel"
            android:text="@string/phone_number"
            />

        <TextView
            android:id="@id/txtPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:text=": Text"
            />

    </LinearLayout>

</LinearLayout>
